Avance vista landing

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
             />
           </div>
           <div class="col-lg-6">
-            <!-- <h2>Las mejores soluciones al alcance de tus manos</h2> -->
             <h2>Soluciones digitales para un mundo moderno</h2>
             <p class="text-muted">
               WebSavvy es una empresa dedicada a crear herramientas digitales
@@ -71,24 +70,6 @@
               necesidades específicas de cada sector y ofrecer soluciones
               innovadoras a nuestros clientes.
             </p>
-            <!-- <div class="row center">
-              <div class="col-md-6">
-                <button
-                  class="btn btn-primary js-modal-btn"
-                  data-video-id="B6uuIHpFkuo"
-                >
-                  <i class="fas fa-play-circle me-2"></i>App Pymes
-                </button>
-              </div>
-              <div class="col-md-6">
-                <button
-                  class="btn btn-primary js-modal-btn"
-                  data-video-id="B6uuIHpFkuo"
-                >
-                  <i class="fas fa-play-circle me-2"></i>App nutricionistas
-                </button>
-              </div>
-            </div> -->
           </div>
         </div>
         <!-- <div class="row py-5">
@@ -172,12 +153,8 @@
     >
       <div class="container">
         <p class="h6 text-uppercase text-primary">Aplicación para Pymes</p>
-        <!-- <h2 class="mb-5">
-            Potencia tu negocio y práctica nutricional con nuestras aplicaciones
-            web especializadas
-          </h2> -->
         <!-- SECTION FOR PYMES -->
-        <div class="row align-items-center gy-5">
+        <div class="row align-items-center align-items-stretch gy-5">
           <div class="col-lg-6">
             <h2>Potentes herramientas para el éxito empresarial</h2>
             <p class="text-muted">
@@ -217,9 +194,11 @@
                     >
                       <use xlink:href="#document-saved-1"></use>
                     </svg>
-                    <h3 class="h5 my-3">Carácteristica 1</h3>
+                    <h3 class="h5 my-3">Gestión integral</h3>
                     <p class="text-sm mb-0 text-muted">
-                      Info característica 1.
+                      Con nuestra aplicación web, administra tu negocio de
+                      manera eficiente en un solo lugar, desde productos e
+                      inventario hasta ventas y clientes.
                     </p>
                   </div>
                 </div>
@@ -227,16 +206,18 @@
               <div class="col-lg-6 col-sm-6">
                 <!-- Services Item-->
                 <div class="card border-0 shadow rounded-lg text-start px-2">
-                  <div class="card-body px py-5">
+                  <div class="card-body px py-5" style="height: 301px">
                     <svg
                       class="svg-icon"
                       style="width: 40px; height: 40px; color: #39f8d2"
                     >
-                      <use xlink:href="#map-marker-1"></use>
+                      <use xlink:href="#shopping-cart-1"></use>
                     </svg>
-                    <h3 class="h5 my-3">Carácteristica 2</h3>
+                    <h3 class="h5 my-3">Ecommerce integrado</h3>
                     <p class="text-sm mb-0 text-muted">
-                      Info característica 2.
+                      Nuestra aplicación simplifica la creación de tu tienda en
+                      línea, expande tu alcance y aumenta tus ventas en el mundo
+                      digital.
                     </p>
                   </div>
                 </div>
@@ -244,16 +225,18 @@
               <div class="col-lg-6 col-sm-6">
                 <!-- Services Item-->
                 <div class="card border-0 shadow rounded-lg text-start px-2">
-                  <div class="card-body px py-5">
+                  <div class="card-body px py-5" style="height: 346.6px">
                     <svg
                       class="svg-icon"
                       style="width: 40px; height: 40px; color: #8190ff"
                     >
-                      <use xlink:href="#arrow-target-1"></use>
+                      <use xlink:href="#retail-bag-1"></use>
                     </svg>
-                    <h3 class="h5 my-3">Carácteristica 3</h3>
+                    <h3 class="h5 my-3">Control de inventario</h3>
                     <p class="text-sm mb-0 text-muted">
-                      Info característica 3.
+                      Gestiona tus productos y existencias en tiempo real sin
+                      preocuparte por el stock. Recibe notificaciones para
+                      reabastecer o retirar productos.
                     </p>
                   </div>
                 </div>
@@ -266,20 +249,21 @@
                       class="svg-icon"
                       style="width: 40px; height: 40px; color: #ff634b"
                     >
-                      <use xlink:href="#sorting-1"></use>
+                      <use xlink:href="#pie-chart-1"></use>
                     </svg>
-                    <h3 class="h5 my-3">Carácteristica 4</h3>
+                    <h3 class="h5 my-3">Análisis y reportes de ventas</h3>
                     <p class="text-sm mb-0 text-muted">
-                      Info característica 4.
+                      Análisis detallados y reportes de ventas te ayudan a
+                      entender el rendimiento, identificar productos populares y
+                      tomar decisiones informadas para el crecimiento.
                     </p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="center-div col-lg-12 mt-3">
+          <div class="center-div col-lg-12 mt-5">
             <div class="center-div col-lg-6">
-              <!-- Botón de flecha -->
               <button class="btn btn-arrow" id="plan-btn">
                 <i class="fas fa-arrow-right"></i> Ver Planes
               </button>
@@ -397,11 +381,10 @@
             <button>Choose plan</button>
           </div>
         </div>
-
         <!-- SECTION FOR NUTRICIONISTAS -->
-        <div class="coming-soon-overlay mt-5">
+        <div class="coming-soon-overlay mt-3">
           <div class="coming-soon-content">
-            <div class="row text-end align-items-center">
+            <div class="row text-end align-items-center align-items-stretch">
               <div class="title-nutri">
                 <p class="h6 text-uppercase text-primary">
                   Aplicación para Nutricionistas
@@ -585,7 +568,7 @@
     <!-- Testimonials Section -->
     <!-- class="p-0" -->
     <section
-      class="mt-5" 
+      class="mt-5"
       id="testimonials"
       style="
         background: url(img/testimonials-bg.png) no-repeat;
