Avance vista landing
Se finaliza vista landing, falta añadir precio a los planes

--- a/footer.html
+++ b/footer.html
@@ -8,74 +8,57 @@
         </p>
       </div>
       <div class="col-lg-2">
-        <h2 class="h5 mb-4">Quick Links</h2>
+        <h2 class="h5 mb-4">Enlaces rápidos</h2>
         <div class="d-flex">
           <ul class="list-unstyled d-inline-block me-4 mb-0">
             <li class="mb-2">
-              <a class="footer-link" href="#!">History</a>
+              <a class="footer-link" href="#home">Inicio</a>
             </li>
             <li class="mb-2">
-              <a class="footer-link" href="#!">About us</a>
+              <a class="footer-link" href="#about">Nosotros</a>
             </li>
             <li class="mb-2">
-              <a class="footer-link" href="#!">Contact us</a>
+              <a class="footer-link" href="#features">Características</a>
             </li>
             <li class="mb-2">
-              <a class="footer-link" href="#!">Services</a>
+              <a class="footer-link" href="#join-us">¡Únete!</a>
             </li>
+            <!-- <li class="mb-2">
+              <a class="footer-link" href="#testimonials">Services</a>
+            </li> -->
           </ul>
         </div>
       </div>
-      <div class="col-lg-2">
-        <h2 class="h5 mb-4">Services</h2>
-        <div class="d-flex">
-          <ul class="list-unstyled me-4 mb-0">
-            <li class="mb-2">
-              <a class="footer-link" href="#!">History</a>
-            </li>
-            <li class="mb-2">
-              <a class="footer-link" href="#!">About us</a>
-            </li>
-            <li class="mb-2">
-              <a class="footer-link" href="#!">Contact us</a>
-            </li>
-            <li class="mb-2">
-              <a class="footer-link" href="#!">Services</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-lg-5">
-        <h2 class="h5 mb-4">Contact Info</h2>
+      <div class="col-lg-7">
+        <h2 class="h5 mb-4">Información de contacto</h2>
         <ul class="list-unstyled me-4 mb-3">
-          <li class="mb-2 text-muted">
+          <!-- <li class="mb-2 text-muted">
             728 Ocello Street, San Diego, California.
+          </li> -->
+          <li class="mb-2">
+            <a class="footer-link" href="tel:56988539685">+56988539685</a>
           </li>
           <li class="mb-2">
-            <a class="footer-link" href="tel:619-851-4132">619-851-4132</a>
-          </li>
-          <li class="mb-2">
-            <a class="footer-link" href="mailto:Nova@example.com"
-              >Nova@example.com</a
+            <a class="footer-link" href="mailto:contacto@websavvy.cl"
+              >contacto@websavvy.cl</a
             >
           </li>
         </ul>
         <ul class="list-inline mb-0">
           <li class="list-inline-item">
-            <a class="social-link" href="#!"
+            <a class="social-link" href="https://www.facebook.com/websavvycl/"
               ><i class="fab fa-facebook-f"></i
             ></a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link" href="#!"><i class="fab fa-twitter"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link" href="#!"
-              ><i class="fab fa-linkedin-in"></i
+            <a
+              class="social-link"
+              href="https://api.whatsapp.com/send?phone=56988539685"
+              ><i class="fab fa-whatsapp"></i
             ></a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link" href="#!"
+            <a class="social-link" href="https://www.instagram.com/websavvy.cl/"
               ><i class="fab fa-instagram"></i
             ></a>
           </li>
