--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet" />
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="css/custom.css" />
-    <link rel="stylesheet" href="css/cards-plan.css" />
+    <link rel="stylesheet" href="css/plans.css" />
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.ico" />
   </head>
@@ -271,115 +271,175 @@
           </div>
         </div>
         <div
-          id="plan-div"
+          id="generic_price_table"
           class="center-div col-lg-12 mt-3"
           style="display: none"
         >
-          <div class="wrapper shadow">
-            <input type="radio" name="slider" id="tab-1" />
-            <input type="radio" name="slider" id="tab-2" checked />
-            <input type="radio" name="slider" id="tab-3" />
-            <header>
-              <label for="tab-1" class="tab-1">Mensual</label>
-              <label for="tab-2" class="tab-2">6 meses</label>
-              <label for="tab-3" class="tab-3">Anual</label>
-              <div class="slider"></div>
-            </header>
-            <div class="card-area">
-              <div class="cards">
-                <div class="row row-1">
-                  <div class="price-details">
-                    <span class="price">19</span>
-                    <p>For beginner use</p>
+          <section>
+            <div class="container">
+              <div class="row">
+                <!-- Mensual -->
+                <div class="col-lg-4">
+                  <!--PRICE CONTENT START-->
+                  <div class="generic_content clearfix shadow">
+                    <!--HEAD PRICE DETAIL START-->
+                    <div class="generic_head_price clearfix">
+                      <!--HEAD CONTENT START-->
+                      <div class="generic_head_content clearfix">
+                        <!--HEAD START-->
+                        <div class="head_bg"></div>
+                        <div class="head">
+                          <span>Mensual</span>
+                          <span class="free"
+                            >*Contáctanos para tu prueba gratis</span
+                          >
+                        </div>
+                        <!--//HEAD END-->
+                      </div>
+                      <!--//HEAD CONTENT END-->
+
+                      <!--PRICE START-->
+                      <div class="generic_price_tag clearfix">
+                        <span class="price">
+                          <span class="sign">$</span>
+                          <span class="currency">99</span>
+                          <span class="cent">.99</span>
+                          <span class="month">/MEN</span>
+                        </span>
+                      </div>
+                      <!--//PRICE END-->
+                    </div>
+                    <!--//HEAD PRICE DETAIL END-->
+
+                    <!--FEATURE LIST START-->
+                    <div class="generic_feature_list">
+                      <ul>
+                        <li><span>Gestión integral</span> del negocio</li>
+                        <li><span>Ecoommerce</span> para sus productos</li>
+                        <li><span>Inventario</span> de sus productos</li>
+                        <li><span>Análisis y reportes</span> de ventas</li>
+                        <li><span>Seguridad y respaldo</span> de productos</li>
+                      </ul>
+                    </div>
+                    <!--//FEATURE LIST END-->
+
+                    <!--BUTTON START-->
+                    <div class="generic_price_btn clearfix">
+                      <a class="" href="">Contactar</a>
+                    </div>
+                    <!--//BUTTON END-->
                   </div>
-                  <ul class="features">
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span>100 GB Premium Bandwidth</span>
-                    </li>
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span
-                        >FREE 50+ Installation Scripts WordPress Supported</span
-                      >
-                    </li>
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span
-                        >One FREE Domain Registration .com and .np extensions
-                        only</span
-                      >
-                    </li>
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span>Unlimited Email Accounts & Databases</span>
-                    </li>
-                  </ul>
+                  <!--//PRICE CONTENT END-->
                 </div>
-                <div class="row">
-                  <div class="price-details">
-                    <span class="price">99</span>
-                    <p>For professional use</p>
+                <!-- 6 Meses -->
+                <div class="col-lg-4">
+                  <!--PRICE CONTENT START-->
+                  <div class="generic_content active clearfix shadow">
+                    <!--HEAD PRICE DETAIL START-->
+                    <div class="generic_head_price clearfix">
+                      <!--HEAD CONTENT START-->
+                      <div class="generic_head_content clearfix">
+                        <!--HEAD START-->
+                        <div class="head_bg"></div>
+                        <div class="head">
+                          <span>6 meses</span>
+                          <span class="free"
+                            >*Contáctanos para tu prueba gratis</span
+                          >
+                        </div>
+                        <!--//HEAD END-->
+                      </div>
+                      <!--//HEAD CONTENT END-->
+
+                      <!--PRICE START-->
+                      <div class="generic_price_tag clearfix">
+                        <span class="price">
+                          <span class="sign">$</span>
+                          <span class="currency">199</span>
+                          <span class="cent">.99</span>
+                          <span class="month">/6 MESES</span>
+                        </span>
+                      </div>
+                      <!--//PRICE END-->
+                    </div>
+                    <!--//HEAD PRICE DETAIL END-->
+
+                    <!--FEATURE LIST START-->
+                    <div class="generic_feature_list">
+                      <ul>
+                        <li><span>Gestión integral</span> del negocio</li>
+                        <li><span>Ecoommerce</span> para sus productos</li>
+                        <li><span>Inventario</span> de sus productos</li>
+                        <li><span>Análisis y reportes</span> de ventas</li>
+                        <li><span>Seguridad y respaldo</span> de productos</li>
+                      </ul>
+                    </div>
+                    <!--//FEATURE LIST END-->
+
+                    <!--BUTTON START-->
+                    <div class="generic_price_btn clearfix">
+                      <a class="" href="">Contactar</a>
+                    </div>
+                    <!--//BUTTON END-->
                   </div>
-                  <ul class="features">
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span>Unlimited GB Premium Bandwidth</span>
-                    </li>
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span
-                        >FREE 200+ Installation Scripts WordPress
-                        Supported</span
-                      >
-                    </li>
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span
-                        >Five FREE Domain Registration .com and .np extensions
-                        only</span
-                      >
-                    </li>
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span>Unlimited Email Accounts & Databases</span>
-                    </li>
-                  </ul>
+                  <!--//PRICE CONTENT END-->
                 </div>
-                <div class="row">
-                  <div class="price-details">
-                    <span class="price">49</span>
-                    <p>For team collaboration</p>
+                <!-- Anual -->
+                <div class="col-lg-4">
+                  <!--PRICE CONTENT START-->
+                  <div class="generic_content clearfix shadow">
+                    <!--HEAD PRICE DETAIL START-->
+                    <div class="generic_head_price clearfix">
+                      <!--HEAD CONTENT START-->
+                      <div class="generic_head_content clearfix">
+                        <!--HEAD START-->
+                        <div class="head_bg"></div>
+                        <div class="head">
+                          <span>Anual</span>
+                          <span class="free"
+                            >*Contáctanos para tu prueba gratis</span
+                          >
+                        </div>
+                        <!--//HEAD END-->
+                      </div>
+                      <!--//HEAD CONTENT END-->
+
+                      <!--PRICE START-->
+                      <div class="generic_price_tag clearfix">
+                        <span class="price">
+                          <span class="sign">$</span>
+                          <span class="currency">299</span>
+                          <span class="cent">.99</span>
+                          <span class="month">/ANUAL</span>
+                        </span>
+                      </div>
+                      <!--//PRICE END-->
+                    </div>
+                    <!--//HEAD PRICE DETAIL END-->
+
+                    <!--FEATURE LIST START-->
+                    <div class="generic_feature_list">
+                      <ul>
+                        <li><span>Gestión integral</span> del negocio</li>
+                        <li><span>Ecoommerce</span> para sus productos</li>
+                        <li><span>Inventario</span> de sus productos</li>
+                        <li><span>Análisis y reportes</span> de ventas</li>
+                        <li><span>Seguridad y respaldo</span> de productos</li>
+                      </ul>
+                    </div>
+                    <!--//FEATURE LIST END-->
+
+                    <!--BUTTON START-->
+                    <div class="generic_price_btn clearfix">
+                      <a class="" href="">Contactar</a>
+                    </div>
+                    <!--//BUTTON END-->
                   </div>
-                  <ul class="features">
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span>200 GB Premium Bandwidth</span>
-                    </li>
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span
-                        >FREE 100+ Installation Scripts WordPress
-                        Supported</span
-                      >
-                    </li>
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span
-                        >Two FREE Domain Registration .com and .np extensions
-                        only</span
-                      >
-                    </li>
-                    <li>
-                      <i class="fas fa-check"></i
-                      ><span>Unlimited Email Accounts & Databases</span>
-                    </li>
-                  </ul>
+                  <!--//PRICE CONTENT END-->
                 </div>
               </div>
             </div>
-            <button>Choose plan</button>
-          </div>
+          </section>
         </div>
         <!-- SECTION FOR NUTRICIONISTAS -->
         <div class="coming-soon-overlay mt-3">
@@ -440,9 +500,12 @@
                         >
                           <use xlink:href="#document-saved-1"></use>
                         </svg>
-                        <h3 class="h5 my-3">Carácteristica 1</h3>
+                        <h3 class="h5 my-3">Registros sanitarios</h3>
                         <p class="text-sm mb-0 text-muted">
-                          Info característica 1.
+                          Nuestra aplicación web ayuda a nutricionistas a
+                          gestionar registros sanitarios de pacientes, brindando
+                          información médica y historial de enfermedades y
+                          alergias para una atención personalizada.
                         </p>
                       </div>
                     </div>
@@ -459,9 +522,12 @@
                         >
                           <use xlink:href="#map-marker-1"></use>
                         </svg>
-                        <h3 class="h5 my-3">Carácteristica 2</h3>
+                        <h3 class="h5 my-3">Etiquetado nutricional</h3>
                         <p class="text-sm mb-0 text-muted">
-                          Info característica 2.
+                          Ahorra tiempo y esfuerzo al generar etiquetas
+                          nutricionales precisas y profesionales para los planes
+                          de alimentación personalizados que creas para tus
+                          pacientes.
                         </p>
                       </div>
                     </div>
@@ -478,9 +544,12 @@
                         >
                           <use xlink:href="#arrow-target-1"></use>
                         </svg>
-                        <h3 class="h5 my-3">Carácteristica 3</h3>
+                        <h3 class="h5 my-3">Análisis nutricional</h3>
                         <p class="text-sm mb-0 text-muted">
-                          Info característica 3.
+                          Nuestra aplicación te permite evaluar rápidamente la
+                          ingesta de nutrientes de tus pacientes, identificar
+                          deficiencias o excesos, y ofrecer recomendaciones
+                          basadas en datos científicos actualizados.
                         </p>
                       </div>
                     </div>
@@ -497,9 +566,11 @@
                         >
                           <use xlink:href="#sorting-1"></use>
                         </svg>
-                        <h3 class="h5 my-3">Carácteristica 4</h3>
+                        <h3 class="h5 my-3">Planificación de dietas</h3>
                         <p class="text-sm mb-0 text-muted">
-                          Info característica 4.
+                          Nuestra aplicación te permite ajustar fácilmente las
+                          dietas según las necesidades individuales y registrar
+                          los cambios para una monitorización efectiva.
                         </p>
                       </div>
                     </div>
@@ -567,7 +638,7 @@
     </section>
     <!-- Testimonials Section -->
     <!-- class="p-0" -->
-    <section
+    <!-- <section
       class="mt-5"
       id="testimonials"
       style="
@@ -689,7 +760,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Join Us Section -->
     <section class="with-pattern-1 py-5" id="join-us">
       <div class="container py-5">
