--- a/header.html
+++ b/header.html
@@ -29,11 +29,11 @@
           <li class="nav-item">
             <a class="nav-link link-scroll" href="#features">Características</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link link-scroll" href="#testimonials"
               >Testimonials</a
             >
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link link-scroll" href="#join-us">
               ¡Únete!
