--- a/footer.html
+++ b/footer.html
@@ -46,19 +46,26 @@
         </ul>
         <ul class="list-inline mb-0">
           <li class="list-inline-item">
-            <a class="social-link" href="https://www.facebook.com/websavvycl/"
+            <a
+              class="social-link"
+              target="_blank"
+              href="https://www.facebook.com/websavvycl/"
               ><i class="fab fa-facebook-f"></i
             ></a>
           </li>
           <li class="list-inline-item">
             <a
+              target="_blank"
               class="social-link"
               href="https://api.whatsapp.com/send?phone=56988539685"
               ><i class="fab fa-whatsapp"></i
             ></a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link" href="https://www.instagram.com/websavvy.cl/"
+            <a
+              target="_blank"
+              class="social-link"
+              href="https://www.instagram.com/websavvy.cl/"
               ><i class="fab fa-instagram"></i
             ></a>
           </li>
