Avance vista landing
Se finaliza landing.

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                       class="svg-icon"
                       style="width: 40px; height: 40px; color: #ff634b"
                     >
-                      <use xlink:href="#pie-chart-1"></use>
+                      <use xlink:href="#numbers-1"></use>
                     </svg>
                     <h3 class="h5 my-3">Análisis y reportes de ventas</h3>
                     <p class="text-sm mb-0 text-muted">
@@ -302,9 +302,13 @@
                       <div class="generic_price_tag clearfix">
                         <span class="price">
                           <span class="sign">$</span>
-                          <span class="currency">99</span>
-                          <span class="cent">.99</span>
-                          <span class="month">/MEN</span>
+                          <span class="currency">5.990</span>
+                          <span class="month">/MES</span>
+                        </span>
+                        <span class="price">
+                          <span class="sign_launch">$</span>
+                          <span class="currency_launch">9.990</span>
+                          <span class="month_launch">/MES</span>
                         </span>
                       </div>
                       <!--//PRICE END-->
@@ -325,7 +329,12 @@
 
                     <!--BUTTON START-->
                     <div class="generic_price_btn clearfix">
-                      <a class="" href="">Contactar</a>
+                      <a
+                        class=""
+                        target="_blank"
+                        href="https://wa.me/56988539685?text=%C2%A1Hola!%0AEstoy%20interesado%20en%20el%20plan mensual,%20de%20la%20aplicación%20para%20*Pymes*."
+                        >Contactar</a
+                      >
                     </div>
                     <!--//BUTTON END-->
                   </div>
@@ -355,9 +364,14 @@
                       <div class="generic_price_tag clearfix">
                         <span class="price">
                           <span class="sign">$</span>
-                          <span class="currency">199</span>
-                          <span class="cent">.99</span>
+                          <span class="currency">42.000</span>
+                          <!-- <span class="cent">.99</span> -->
                           <span class="month">/6 MESES</span>
+                        </span>
+                        <span class="price">
+                          <span class="sign_launch">$</span>
+                          <span class="currency_launch">48.000</span>
+                          <span class="month_launch">/6 MESES</span>
                         </span>
                       </div>
                       <!--//PRICE END-->
@@ -378,7 +392,12 @@
 
                     <!--BUTTON START-->
                     <div class="generic_price_btn clearfix">
-                      <a class="" href="">Contactar</a>
+                      <a
+                        class=""
+                        target="_blank"
+                        href="https://wa.me/56988539685?text=%C2%A1Hola!%0AEstoy%20interesado%20en%20el%20plan%20de%206%20meses,%20de%20la%20aplicación%20para%20*Pymes*."
+                        >Contactar</a
+                      >
                     </div>
                     <!--//BUTTON END-->
                   </div>
@@ -408,9 +427,14 @@
                       <div class="generic_price_tag clearfix">
                         <span class="price">
                           <span class="sign">$</span>
-                          <span class="currency">299</span>
-                          <span class="cent">.99</span>
+                          <span class="currency">60.000</span>
+                          <!-- <span class="cent">.99</span> -->
                           <span class="month">/ANUAL</span>
+                        </span>
+                        <span class="price">
+                          <span class="sign_launch">$</span>
+                          <span class="currency_launch">72.000</span>
+                          <span class="month_launch">/ANUAL</span>
                         </span>
                       </div>
                       <!--//PRICE END-->
@@ -431,7 +455,12 @@
 
                     <!--BUTTON START-->
                     <div class="generic_price_btn clearfix">
-                      <a class="" href="">Contactar</a>
+                      <a
+                        class=""
+                        target="_blank"
+                        href="https://wa.me/56988539685?text=%C2%A1Hola!%0AEstoy%20interesado%20en%20el%20plan anual,%20de%20la%20aplicación%20para%20*Pymes*."
+                        >Contactar</a
+                      >
                     </div>
                     <!--//BUTTON END-->
                   </div>
@@ -498,7 +527,7 @@
                           class="svg-icon"
                           style="width: 40px; height: 40px; color: #ff904e"
                         >
-                          <use xlink:href="#document-saved-1"></use>
+                          <use xlink:href="#news-1"></use>
                         </svg>
                         <h3 class="h5 my-3">Registros sanitarios</h3>
                         <p class="text-sm mb-0 text-muted">
@@ -520,7 +549,7 @@
                           class="svg-icon"
                           style="width: 40px; height: 40px; color: #39f8d2"
                         >
-                          <use xlink:href="#map-marker-1"></use>
+                          <use xlink:href="#tag-1"></use>
                         </svg>
                         <h3 class="h5 my-3">Etiquetado nutricional</h3>
                         <p class="text-sm mb-0 text-muted">
@@ -542,7 +571,7 @@
                           class="svg-icon"
                           style="width: 40px; height: 40px; color: #8190ff"
                         >
-                          <use xlink:href="#arrow-target-1"></use>
+                          <use xlink:href="#list-details-1"></use>
                         </svg>
                         <h3 class="h5 my-3">Análisis nutricional</h3>
                         <p class="text-sm mb-0 text-muted">
@@ -564,7 +593,7 @@
                           class="svg-icon"
                           style="width: 40px; height: 40px; color: #ff634b"
                         >
-                          <use xlink:href="#sorting-1"></use>
+                          <use xlink:href="#food-1"></use>
                         </svg>
                         <h3 class="h5 my-3">Planificación de dietas</h3>
                         <p class="text-sm mb-0 text-muted">
@@ -920,9 +949,7 @@
       // inject local SVG sprite (using only 'icons/orion-svg-sprite.svg' path)
       // while using file:// protocol
       // pls don't forget to change to your domain :)
-      injectSvgSprite(
-        "https://bootstraptemple.com/files/icons/orion-svg-sprite.svg"
-      );
+      injectSvgSprite("icons/orion-svg-sprite.svg");
     </script>
     <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
     <link
