--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </ul>
             <button
               class="btn btn-primary js-modal-btn"
-              data-video-id="B6uuIHpFkuo"
+              data-video-id="EYJveyfcjiQ"
             >
               <i class="fas fa-play-circle me-2"></i>Video demo
             </button>
