--- a/footer.html
+++ b/footer.html
@@ -69,6 +69,14 @@
               ><i class="fab fa-instagram"></i
             ></a>
           </li>
+          <li class="list-inline-item">
+            <a
+              target="_blank"
+              class="social-link"
+              href="https://www.youtube.com/@websavvycl"
+              ><i class="fab fa-youtube"></i
+            ></a>
+          </li>
         </ul>
       </div>
     </div>
